--- a/src/lib/global-styles.css
+++ b/src/lib/global-styles.css
@@ -2,14 +2,16 @@
 
 html {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  height: 100%;
 }
 
 body {
   box-sizing: border-box;
   margin: 0;
+  height: 100%;
 }
 
 #__next {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
